# haskell-book

./: README.md
ch01/: exercises.md
ch02/: exercises.md  where.hs
ch03/: exercises.hs  exercises.md  print3fixed.hs
ch04/: exercises.md  moodswing.hs
ch05/: arith3broken.hs  exerises.md  sing.hs
ch06/: exercises.md
ch07/: exercises.md
ch08/: exercises.md  wordnumber.hs
ch09/: cipher.hs  exercises.md  stdfuns.hs
ch10/: exercises.lhs
ch11/: cipher.hs  exercises.lhs
ch12/: exercises.lhs
ch13/: exercises.lhs  exercisesB.lhs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Hangman.hs  Main.hs
ch13/hangman/tests/: tests.hs
ch13/hello/: hello.cabal  stack.yaml
ch13/hello/exe/: Main.hs
ch13/hello/src/: DogsRule.hs  Hello.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/exercises/: exercises.cabal
ch14/exercises/src/: Cipher.hs  Exercises.hs  WordNumber.hs
ch14/exercises/tests/: ExercisesTest.hs  WordNumberTest.hs  tests.hs
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch15/: exercises.lhs
ch15/exercises/src/: Exercises.hs
ch15/exercises/tests/: tests.hs
ch15/orphan-instance/: Listy.hs  ListyInstances.hs
ch16/: exercises.lhs
ch16/exercises/: exercises.cabal
ch16/exercises/src/: Exercises.hs
ch16/exercises/tests/: tests.hs
ch17/: exercises.lhs
ch17/exercises/: .gitignore
ch17/exercises/src/: Exercises.hs
ch17/exercises/tests/: tests.hs
ch18/: exercises.lhs
ch18/exercises/: exercises.cabal
ch18/exercises/src/: Exercises.hs
ch18/exercises/tests/: tests.hs
ch19/exercises/: README.md
ch19/exercises/src/: Exercises.hs
ch19/exercises/tests/: tests.hs
ch20/: exercises.lhs
ch21/: exercises.lhs
ch21/exercises/: LICENSE  exercises.cabal
ch21/exercises/src/: Exercises.hs
ch22/: exercises.lhs
ch22/shawty/: README.md  shawty.cabal
ch22/shawty/src/: Main.hs
ch23/: exercises.lhs
ch24/exercises/: exercises.cabal  stack.yaml
ch24/exercises/src/: Main.hs
ch25/: exercises.lhs
ch26/: HitCount.hs  exercises.lhs
ch27/: exercises.lhs
ch28/: .gitignore  bench1.hs  bench2.hs  bench3.hs  caf1.hs  caf1.prof  caf2.hs  caf2.prof  caf3.hs  caf3.prof  difflist.hs  map-set.hs  prof1.hs  prof1.prof  prof2.hp  prof2.hs  prof2.prof  queue.hs
