name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mvaldesdeleon/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Valdes de Leon
maintainer:          m.valdesdeleon@gmail.com
copyright:           Copyright (c) 2018 Martin Valdes de Leon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
