name:               morse
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/mvaldesdeleon/morse#readme
license:            BSD3
license-file:       LICENSE
author:             Martin Valdes de Leon
maintainer:         m.valdesdeleon@gmail.com
copyright:          Copyright (c) 2018 Martin Valdes de Leon
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

library
  hs-source-dirs:       src
  exposed-modules:      Morse
  ghc-options:          -Wall -fwarn-tabs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , containers
                      , QuickCheck

executable morse
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -Wall -fwarn-tabs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , containers
                      , morse
                      , QuickCheck
  other-modules:        Morse

test-suite tests
  hs-source-dirs:       tests
  main-is:              tests.hs
  ghc-options:          -Wall -fno-warn-orphans
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base
                      , containers
                      , morse
                      , QuickCheck
